feat: valida código gerado por LLM

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -63,7 +63,6 @@
         <section class="videos">
             <div class="container">
                 <div class="video-grid" id="video-grid">
-                    <!-- Videos will be loaded dynamically via JavaScript -->
                 </div>
             </div>
         </section>
@@ -79,7 +78,6 @@
         </div>
     </footer>
 
-    <!-- Video Modal -->
     <div class="modal" id="video-modal">
         <div class="modal-content">
             <span class="close-modal">&times;</span>
@@ -91,7 +89,6 @@
         </div>
     </div>
 
-    <script src="js/data.js"></script>
-    <script src="js/app.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
