feat: adiciona botao para atualizar o site principal

--- a/backend/public/admin.html
+++ b/backend/public/admin.html
@@ -193,7 +193,11 @@
                     <tbody></tbody>
                 </table>
             </section>
+            <button onclick="atualizarSite()">
+                Atualizar Site
+            </button>
         </main>
+
 
         <footer>
             <div class="container">
